--- a/webser-mq/pom.xml
+++ b/webser-mq/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.nwx</groupId>
-    <artifactId>webser-server</artifactId>
+    <artifactId>webser-mq</artifactId>
     <version>1.0</version>
-    <name>webser-server</name>
+    <name>webser-mq</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -20,16 +20,11 @@
 
     <dependencies>
 
-        <dependency>
-            <groupId>com.nwx</groupId>
-            <artifactId>webser-api</artifactId>
-            <version>1.0</version>
-        </dependency>
+
 
         <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-boot-starter</artifactId>
-            <version>3.1.0</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
 
         <dependency>
@@ -42,20 +37,15 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid-spring-boot-starter</artifactId>
-            <version>1.1.9</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-activemq</artifactId>
         </dependency>
+
         <dependency>
-            <groupId>com.alibaba.boot</groupId>
-            <artifactId>dubbo-spring-boot-starter</artifactId>
-            <version>0.2.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.zookeeper</groupId>
-            <artifactId>zookeeper</artifactId>
-            <version>3.4.13</version>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-pool</artifactId>
         </dependency>
     </dependencies>
 
