--- a/webser-mq/src/main/resources/application.yml
+++ b/webser-mq/src/main/resources/application.yml
@@ -8,6 +8,27 @@ spring:
     password: admin
     pool:
       enabled: true
-      max-connections: 100
-
+      max-connections: 5
+      idle-timeout: 30s
+  datasource:
+    name: webser
+    url: jdbc:mysql://127.0.0.1:3306/webser?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+    username: root
+    password: 123456
+    # 使用druid数据源
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    filters: stat
+    maxActive: 20
+    initialSize: 1
+    maxWait: 60000
+    minIdle: 1
+    timeBetweenEvictionRunsMillis: 60000
+    minEvictableIdleTimeMillis: 300000
+    validationQuery: select 'x'
+    testWhileIdle: true
+    testOnBorrow: false
+    testOnReturn: false
+    poolPreparedStatements: true
+    maxOpenPreparedStatements: 20
 
