--- a/webser-server/src/main/resources/application.yml
+++ b/webser-server/src/main/resources/application.yml
@@ -15,8 +15,8 @@ dubbo:
 
 spring:
   datasource:
-    name: test
-    url: jdbc:mysql://127.0.0.1:3306/webser
+    name: webser
+    url: jdbc:mysql://127.0.0.1:3306/webser?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
     username: root
     password: 123456
     # 使用druid数据源
