--- a/webser-web/pom.xml
+++ b/webser-web/pom.xml
@@ -46,6 +46,19 @@
             <artifactId>zookeeper</artifactId>
             <version>3.4.13</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-activemq</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-pool</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.messaginghub</groupId>
+            <artifactId>pooled-jms</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
